tests/compile_error/bad_get.rs
use getset2::Getter;

#[derive(Getter)]
#[get(foobar)]
struct Foobar {}

fn main() {}
