tests/compile_error/bad_get.stderr
error: invalid #[get(..)] attribute, cannot find parameter `foobar` in this scope
 --> tests/compile_error/bad_get.rs:4:1
  |
4 | #[get(foobar)]
  | ^
